--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.53.2",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.14.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
